Update README: Add information about Console and JavaFX versions